--- a/main.tex
+++ b/main.tex
@@ -1,144 +1,92 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%~~~~~~ Bowen's Doctoral Template ~~~~~~
+%
 % Masters/Doctoral Thesis 
 % LaTeX Template
 % Version 2.4 (22/11/16)
-%
 % This template has been downloaded from:
 % http://www.LaTeXTemplates.com
-%
 % Version 2.x major modifications by:
 % Vel (vel@latextemplates.com)
-%
 % This template is based on a template by:
 % Steve Gunn (http://users.ecs.soton.ac.uk/srg/softwaretools/document/templates/)
 % Sunil Patel (http://www.sunilpatel.co.uk/thesis-template/)
-%
 % Template license:
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
 %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
-
-\documentclass[
-11pt, % The default document font size, options: 10pt, 11pt, 12pt
-%oneside, % Two side (alternating margins) for binding by default, uncomment to switch to one side
-english, % ngerman for German
-singlespacing, % Single line spacing, alternatives: onehalfspacing or doublespacing
-%draft, % Uncomment to enable draft mode (no pictures, no links, overfull hboxes indicated)
-%nolistspacing, % If the document is onehalfspacing or doublespacing, uncomment this to set spacing in lists to single
-%liststotoc, % Uncomment to add the list of figures/tables/etc to the table of contents
-%toctotoc, % Uncomment to add the main table of contents to the table of contents
-%parskip, % Uncomment to add space between paragraphs
-%nohyperref, % Uncomment to not load the hyperref package
-headsepline, % Uncomment to get a line under the header
-%chapterinoneline, % Uncomment to place the chapter title next to the number on one line
-%consistentlayout, % Uncomment to change the layout of the declaration, abstract and acknowledgements pages to match the default layout
-]{MastersDoctoralThesis} % The class file specifying the document structure
-
-\usepackage[utf8]{inputenc} % Required for inputting international characters
-\usepackage[T1]{fontenc} % Output font encoding for international characters
-
-\usepackage{palatino} % Use the Palatino font by default
-
-\usepackage[backend=bibtex,style=authoryear,natbib=true]{biblatex} % Use the bibtex backend with the authoryear citation style (which resembles APA)
-
+%~~~~~~	PACKAGES AND CONFIGURATIONS~~~~~~
+\documentclass[11pt,english,singlespacing,headsepline,]{MastersDoctoralThesis}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{palatino}
+\usepackage[backend=bibtex,style=authoryear,natbib=true]{biblatex} 
 \addbibresource{example.bib} % The filename of the bibliography
-
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
+%~~~~~~	MARGIN SETTINGS ~~~~~~
+\geometry{paper=a4paper,inner=2.5cm,outer=3.8cm,
+bindingoffset=.5cm,top=1.5cm,bottom=1.5cm,}
 
-%----------------------------------------------------------------------------------------
-%	MARGIN SETTINGS
-%----------------------------------------------------------------------------------------
+%~~~~~~	THESIS INFORMATION ~~~~~~
+\thesistitle{Final Exam Outline} 
+\supervisor{Instructor Sara \textsc{Horton}} % Your supervisor's name, \supname
+\examiner{Sara Horton} % Your examiner's name, \examname
+\degree{Business Administration \& Management AAS} % Your degree name, \degreename
+\author{Bowen \textsc{Durrett}} % Your name, \authorname
+\addresses{1220 April Bloom Drive, College Station, 77802, T.X.} % Your address, \addressname
+\subject{Business Administration \& Management} % Your subject area, \subjectname
+\keywords{hope} % Keywords for your thesis, \keywordnames
+\university{\href{http://www.Blinn.edu}{Blinn College}} % Your university's name and URL, \univname
+\department{\href{http://www.blinn.edu/twe/business/businesshome.html}{Associate of Applied Sciences}} % Your department's name and URL,\deptname
+\group{\href{http://www.blinn.edu/twe/degree_cert\%20plans/BusAdminMgmtAAS.html}{Business Administration and Management}} % Your research group's name and URL,\groupname
+\faculty{\href{http://www.blinn.edu/humanities/Blinn-college-Spr2016-Humanities-faculty.pdf}{Sara Horton}} % Your faculty's name and URL, \facname
 
-\geometry{
-	paper=a4paper, % Change to letterpaper for US letter
-	inner=2.5cm, % Inner margin
-	outer=3.8cm, % Outer margin
-	bindingoffset=.5cm, % Binding offset
-	top=1.5cm, % Top margin
-	bottom=1.5cm, % Bottom margin
-	%showframe, % Uncomment to show how the type block is set on the page
-}
-
-%----------------------------------------------------------------------------------------
-%	THESIS INFORMATION
-%----------------------------------------------------------------------------------------
-
-\thesistitle{Thesis Title} % Your thesis title, this is used in the title and abstract, print it elsewhere with \ttitle
-\supervisor{Dr. James \textsc{Smith}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
-\examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
-\degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{John \textsc{Smith}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
-\addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
-
-\subject{Biological Sciences} % Your subject area, this is not currently used anywhere in the template, print it elsewhere with \subjectname
-\keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
-\university{\href{http://www.university.com}{University Name}} % Your university's name and URL, this is used in the title page and abstract, print it elsewhere with \univname
-\department{\href{http://department.university.com}{Department or School Name}} % Your department's name and URL, this is used in the title page and abstract, print it elsewhere with \deptname
-\group{\href{http://researchgroup.university.com}{Research Group Name}} % Your research group's name and URL, this is used in the title page, print it elsewhere with \groupname
-\faculty{\href{http://faculty.university.com}{Faculty Name}} % Your faculty's name and URL, this is used in the title page and abstract, print it elsewhere with \facname
-
+%~~~~~~ At Begin Document ~~~~~~
 \AtBeginDocument{
-\hypersetup{pdftitle=\ttitle} % Set the PDF's title to your title
-\hypersetup{pdfauthor=\authorname} % Set the PDF's author to your name
-\hypersetup{pdfkeywords=\keywordnames} % Set the PDF's keywords to your keywords
-}
+\hypersetup{pdftitle=\ttitle}
+\hypersetup{pdfauthor=\authorname}
+\hypersetup{pdfkeywords=\keywordnames}}
 
+%~~~~~~ Begin Document ~~~~~~
 \begin{document}
+\frontmatter
+\pagestyle{plain}
 
-\frontmatter % Use roman page numbering style (i, ii, iii, iv...) for the pre-content pages
-
-\pagestyle{plain} % Default to the plain heading style until the thesis style is called for the body content
-
-%----------------------------------------------------------------------------------------
-%	TITLE PAGE
-%----------------------------------------------------------------------------------------
-
+%~~~~~~	TITLE PAGE ~~~~~~	
 \begin{titlepage}
 \begin{center}
-
 \vspace*{.06\textheight}
 {\scshape\LARGE \univname\par}\vspace{1.5cm} % University name
-\textsc{\Large Doctoral Thesis}\\[0.5cm] % Thesis type
-
+\textsc{\Large Final Exam}\\[0.5cm] % Thesis type
 \HRule \\[0.4cm] % Horizontal line
 {\huge \bfseries \ttitle\par}\vspace{0.4cm} % Thesis title
 \HRule \\[1.5cm] % Horizontal line
- 
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-\href{http://www.johnsmith.com}{\authorname} % Author name - remove the \href bracket to remove the link
+\href{http://www.blinn.edu/current.html}{\authorname}
 \end{flushleft}
 \end{minipage}
 \begin{minipage}[t]{0.4\textwidth}
 \begin{flushright} \large
-\emph{Supervisor:} \\
-\href{http://www.jamessmith.com}{\supname} % Supervisor name - remove the \href bracket to remove the link  
+\emph{Supervisor: L.A. Frisby} \\
+\href{https://www.linkedin.com/in/frisbyohfrisby
+}{\supname} % Supervisor name  
 \end{flushright}
 \end{minipage}\\[3cm]
- 
 \vfill
 
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
+%~~~~~~ Subtitle ~~~~~
+\large \textit{An Outline Submitted in fulfillment of the final Exam \\ for the degree of \degreename}\\[0.3cm] % University requirement text
 \textit{in the}\\[0.4cm]
 \groupname\\\deptname\\[2cm] % Research group name and department name
- 
 \vfill
-
 {\large \today}\\[4cm] % Date
-%\includegraphics{Logo} % University/department logo - uncomment to place it
+%\includegraphics{Logo} % University/department logo
  
 \vfill
 \end{center}
 \end{titlepage}
 
-%----------------------------------------------------------------------------------------
 %	DECLARATION PAGE
-%----------------------------------------------------------------------------------------
 
 \begin{declaration}
 \addchaptertocentry{\authorshipname} % Add the declaration to the table of contents
@@ -160,49 +108,39 @@ headsepline, % Uncomment to get a line under the header
 \rule[0.5em]{25em}{0.5pt} % This prints a line to write the date
 \end{declaration}
 
-\cleardoublepage
-
-%----------------------------------------------------------------------------------------
-%	QUOTATION PAGE
-%----------------------------------------------------------------------------------------
+%~~~~~~	QUOTATION PAGE ~~~~~~
 
 \vspace*{0.2\textheight}
 
-\noindent\enquote{\itshape Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism.}\bigbreak
+\noindent\enquote{\itshape}\bigbreak
 
-\hfill Dave Barry
+\hfill
 
-%----------------------------------------------------------------------------------------
-%	ABSTRACT PAGE
-%----------------------------------------------------------------------------------------
+%~~~~~~	ABSTRACT PAGE
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
 The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
 \end{abstract}
 
-%----------------------------------------------------------------------------------------
-%	ACKNOWLEDGEMENTS
-%----------------------------------------------------------------------------------------
+%~~~~~~	ACKNOWLEDGEMENTS ~~~~~~
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
 \end{acknowledgements}
 
-%----------------------------------------------------------------------------------------
-%	LIST OF CONTENTS/FIGURES/TABLES PAGES
-%----------------------------------------------------------------------------------------
 
-\tableofcontents % Prints the main table of contents
+%~~~~~~	LIST OF CONTENTS/FIGURES/TABLES PAGES ~~~~~~
 
-\listoffigures % Prints the list of figures
 
-\listoftables % Prints the list of tables
+\tableofcontents
 
-%----------------------------------------------------------------------------------------
-%	ABBREVIATIONS
-%----------------------------------------------------------------------------------------
+\listoffigures 
+
+\listoftables
+
+%~~~~~~	ABBREVIATIONS ~~~~~~
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
@@ -211,9 +149,8 @@ The acknowledgments and the people to thank go here, don't forget to include you
 
 \end{abbreviations}
 
-%----------------------------------------------------------------------------------------
-%	PHYSICAL CONSTANTS/OTHER DEFINITIONS
-%----------------------------------------------------------------------------------------
+
+%~~~~~~	PHYSICAL CONSTANTS/OTHER DEFINITIONS ~~~~~~
 
 \begin{constants}{lr@{${}={}$}l} % The list of physical constants is a three column table
 
